--- a/ppms_project/profilingApp/static/CSS/styles.css
+++ b/ppms_project/profilingApp/static/CSS/styles.css
@@ -57,7 +57,7 @@ a{
 
 .page-item.active .page-link {
   color: rgb(235, 233, 233) !important;
-  background-color: #929292 !important;
+  background-color: #188045 !important;
   border-color:rgba(0, 0, 0, 0.356) !important;
 }
 
@@ -67,10 +67,15 @@ table{
 thead{
   border-color:  rgba(23, 128, 69, 0.514)!important;
   background-color: #f0fdec;
-    text-align: left !important;
+  text-align: left !important;
+}
+th{
+  border-right: 1px solid !important;
+  padding: 12px 15px !important; 
+  border-color: rgba(23, 128, 69, 0.492)!important;
 }
 
-th, td{
+td{
   border-right: 1px solid !important;
   padding: 12px 15px !important; 
   border-color: rgba(23, 128, 69, 0.288)!important;
@@ -240,58 +245,508 @@ html {
     width: 100%;
     height: 100%;
   }
+  /* Mobile size resolution styling for responsiveness*/
+  @media (max-width: 450px) {
+    .form-group .form-remember {
+      font-size: 8px;
+      font-weight: 400;
+      letter-spacing: 0;
+      text-transform: none;
+    }
+    .input-group select option{
+      background: rgba(0, 0, 0, 0.1);
+      color: rgba(0, 0, 0, 0.6);
+      font-family: inherit;
+      font-size: inherit;
+      font-weight: 500;
+      line-height: inherit;
+    }
+
+    .form-toggle {
+      z-index: 10;
+      position: absolute;
+      top: 30px;
+      right: 20px;
+      background: #FFFFFF;
+      width: 40px;
+      height: 40px;
+      border-radius: 100%;
+      transform-origin: center;
+      transform: translate(0, -25%) scale(0);
+      opacity: 0;
+      cursor: pointer;
+      transition: all 0.3s ease;
+    }
+    .form-toggle:before, .form-toggle:after {
+      content: "";
+      display: block;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      width: 30px;
+      height: 4px;
+      background: rgb(33, 146, 71);
+      transform: translate(-50%, -50%);
+    }
+    .form-toggle:before {
+      transform: translate(-50%, -50%) rotate(45deg);
+    }
+    .form-toggle:after {
+      transform: translate(-50%, -50%) rotate(-45deg);
+    }
+    .form-toggle.visible {
+      transform: translate(0, -25%) scale(1);
+      opacity: 1;
+    }
+   
+    ::placeholder{
+      color:rgba(255, 255, 255, 0.253);
+    }
   
-  .form {
+    .form-group input ,.input-group select{
+      outline: none;
+      display: block;
+      background: rgba(0, 0, 0, 0.1);
+      width: 100%;
+      border: 0;
+      border-radius: 6px;
+      box-sizing: border-box;
+      padding: 12px 20px;
+      color: rgba(0, 0, 0, 0.6);
+      font-family: inherit;
+      font-size: inherit;
+      font-weight: 500;
+      line-height: inherit;
+      transition: 0.3s ease;
+      margin-top: 1px;
+    }
+    .form-group input:focus ,.input-group:focus{
+      color: rgba(0, 0, 0, 0.8);
+    }
+    .two .form-group input {
+      color: #FFFFFF;
+    }
+    .two .form-group input:focus  {
+      color: #FFFFFF;
+    }
+    .form-group button ,.input-group button{
+      outline: none;
+      background: rgb(33, 146, 71);
+      width: 100%;
+      border: 0;
+      border-radius: 4px;
+      padding: 12px 20px;
+      color: #FFFFFF;
+      font-family: inherit;
+      font-size: inherit;
+      font-weight: 500;
+      line-height: inherit;
+      text-transform: uppercase;
+      cursor: pointer;
+    }
+    .two .form-group button{
+      background: #FFFFFF;
+      color: rgb(33, 146, 71);
+    }
+    .form-group .form-remember {
+      font-size: 12px;
+      font-weight: 400;
+      letter-spacing: 0;
+      text-transform: none;
+    }
+    .form-group .form-remember input[type=checkbox] {
+      display: inline-block;
+      width: auto;
+      margin: 0 10px 0 0;
+    }
+    .form-group .form-recovery {
+      color: rgb(33, 146, 71);
+      font-size: 12px;
+      text-decoration: none;
+    }
+    .form-panel.one{
+      padding: 35px 60px 20px 35px;
+    }
+    .form-panel.two.active{
+      padding: 35px 60px 20px 35px;
+    }
+    .form-group label ,.input-group label{
+      display: block;
+      margin: 0 0 10px;
+      color: rgba(0, 0, 0, 0.6);
+      font-size: 12px;
+      font-weight: 350;
+      line-height: 1;
+      text-transform: uppercase;
+      letter-spacing: 0.2em;
+    }
+    .input-group select option{
+      background: rgba(0, 0, 0, 0.1);
+      color: rgba(0, 0, 0, 0.6);
+      font-family: inherit;
+      font-size: inherit;
+      font-weight: 350;
+      line-height: inherit;
+    }
+    .form-group input ,.input-group select{
+      outline: none;
+      display: block;
+      background: rgba(0, 0, 0, 0.1);
+      width: 100%;
+      border: 0;
+      border-radius: 6px;
+      box-sizing: border-box;
+      padding: 9px 20px;
+      color: rgba(0, 0, 0, 0.6);
+      font-family: inherit;
+      font-size: inherit;
+      font-weight: 350;
+      line-height: inherit;
+      transition: 0.3s ease;
+    }
+    .form-group input:focus ,.input-group:focus{
+      color: rgba(0, 0, 0, 0.8);
+    }
+    .two .form-group input {
+      color: #FFFFFF;
+    }
+    .two .form-group input:focus  {
+      color: #FFFFFF;
+    }
+    .form-group button ,.input-group button{
+      outline: none;
+      background: rgb(33, 146, 71);
+      width: 100%;
+      border: 0;
+      border-radius: 4px;
+      padding: 9px 20px;
+      color: #FFFFFF;
+      font-family: inherit;
+      font-size: inherit;
+      font-weight: 350;
+      line-height: inherit;
+      text-transform: uppercase;
+      cursor: pointer;
+    }
+    .two .form-group button{
+      background: #FFFFFF;
+      color: rgb(33, 146, 71);
+    }
+    .form-group .form-remember {
+      font-size: 12px;
+      font-weight: 250;
+      letter-spacing: 0;
+      text-transform: none;
+    }
+    .form-group .form-remember input[type=checkbox] {
+      display: inline-block;
+      width: auto;
+      margin: 0 10px 0 0;
+    }
+    .form-group .form-recovery {
+      color: rgb(33, 146, 71);
+      font-size: 12px;
+      text-decoration: none;
+    }
+   }
+
+   /* Medium Responsiveness */
+  @media (max-width: 770px) { 
+    .form {
+      z-index: 15;
+      position: relative;
+      background: #FFFFFF;
+      border-radius: 4px;
+      box-shadow: 0 0 30px rgba(0, 0, 0, 0.1);
+      box-sizing: border-box;
+      margin: 100px auto 10px;
+      overflow: hidden;
+      height: 100%;
+      width: 100%;
+      padding: 0%;
+    }
+    .form-toggle {
+      z-index: 10;
+      position: absolute;
+      top: 40px;
+      right: 30px;
+      background: #FFFFFF;
+      width: 50px;
+      height: 50px;
+      border-radius: 100%;
+      transform-origin: center;
+      transform: translate(0, -25%) scale(0);
+      opacity: 0;
+      cursor: pointer;
+      transition: all 0.3s ease;
+    }
+    .form-toggle:before, .form-toggle:after {
+      content: "";
+      display: block;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      width: 30px;
+      height: 4px;
+      background: rgb(33, 146, 71);
+      transform: translate(-50%, -50%);
+    }
+    .form-toggle:before {
+      transform: translate(-50%, -50%) rotate(45deg);
+    }
+    .form-toggle:after {
+      transform: translate(-50%, -50%) rotate(-45deg);
+    }
+    .form-toggle.visible {
+      transform: translate(0, -25%) scale(1);
+      opacity: 1;
+    }
+    }
+    .form-group{
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+      margin: 0 0 5px;
+    }
+    .form-group:last-child {
+      margin: 0;
+    }
+    .form-group label ,.input-group label{
+      display: block;
+      margin: 0 0 10px;
+      color: rgba(0, 0, 0, 0.6);
+      font-size: 12px;
+      font-weight: 500;
+      line-height: 1;
+      text-transform: uppercase;
+      letter-spacing: 0.2em;
+    }
+    .two .form-group label ,.input-group label{
+      color: #FFFFFF;
+    }
+    #userTypeSelect{
+      color: #FFFFFF;
+      border-radius:6px;
+    }
+  
+    .input-group select option{
+      background: rgba(0, 0, 0, 0.1);
+      color: rgba(0, 0, 0, 0.6);
+      font-family: inherit;
+      font-size: inherit;
+      font-weight: 500;
+      line-height: inherit;
+    }
+   
+    ::placeholder{
+      color:rgba(255, 255, 255, 0.253);
+    }
+  
+    .form-group input ,.input-group select{
+      outline: none;
+      display: block;
+      background: rgba(0, 0, 0, 0.1);
+      width: 100%;
+      border: 0;
+      border-radius: 6px;
+      box-sizing: border-box;
+      padding: 9px 20px;
+      color: rgba(0, 0, 0, 0.6);
+      font-family: inherit;
+      font-size: inherit;
+      font-weight: 500;
+      line-height: inherit;
+      transition: 0.3s ease;
+    }
+    .form-group input:focus ,.input-group:focus{
+      color: rgba(0, 0, 0, 0.8);
+    }
+    .two .form-group input {
+      color: #FFFFFF;
+    }
+    .two .form-group input:focus  {
+      color: #FFFFFF;
+    }
+    .form-group button ,.input-group button{
+      outline: none;
+      background: rgb(33, 146, 71);
+      width: 100%;
+      border: 0;
+      border-radius: 4px;
+      padding: 9px 20px;
+      color: #FFFFFF;
+      font-family: inherit;
+      font-size: inherit;
+      font-weight: 500;
+      line-height: inherit;
+      text-transform: uppercase;
+      cursor: pointer;
+    }
+    .two .form-group button{
+      background: #FFFFFF;
+      color: rgb(33, 146, 71);
+    }
+    .form-group .form-remember {
+      font-size: 12px;
+      font-weight: 400;
+      letter-spacing: 0;
+      text-transform: none;
+    }
+    .form-group .form-remember input[type=checkbox] {
+      display: inline-block;
+      width: auto;
+      margin: 0 10px 0 0;
+    }
+    .form-group .form-recovery {
+      color: rgb(33, 146, 71);
+      font-size: 12px;
+      text-decoration: none;
+    }
+    .form-panel {
+      padding: 60px calc(5% + 60px) 60px 60px;
+      box-sizing: border-box;
+  
+    }
+  
+    .form-panel.one:before {
+      content: "";
+      display: block;
+      opacity: 0;
+      visibility: hidden;
+      transition: 0.3s ease;
+    }
+    .form-panel.one.hidden:before {
+      display: block;
+      opacity: 1;
+      visibility: visible;
+    }
+    .form-panel.two {
+      z-index: 5;
+      position: absolute;
+      top: 0;
+      left: 95%;
+      background: rgb(33, 146, 71);
+      width: 100%;
+      min-height: 100%;
+      padding: 60px calc(10% + 60px) 60px 60px;
+      transition: 0.3s ease;
+      cursor: pointer;
+      overflow-y:scroll;
+    }
+    .form-panel.two:before, .form-panel.two:after {
+      content: "";
+      display: block;
+      position: absolute;
+      top: 60px;
+      left: 1.5%;
+      background: rgba(255, 255, 255, 0.2);
+      height: 30px;
+      width: 2px;
+      transition: 0.3s ease;
+      overflow-y: scroll;
+    }
+    .form-panel.two:after {
+      left: 3%;
+    }
+    .form-panel.two:hover {
+      left: 93%;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    }
+    .form-panel.two:hover:before, .form-panel.two:hover:after {
+      opacity: 0;
+    }
+    .form-panel.two.active {
+      left: 10%;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+      cursor: default;
+    }
+    .form-panel.two.active:before, .form-panel.two.active:after {
+      opacity: 0;
+    }
+    .form-header {
+      margin: 0 0 40px;
+    }
+    .form-header h1 {
+      padding: 4px 0;
+      color: rgb(33, 146, 71);
+      font-size: 24px;
+      font-weight: 700;
+      text-transform: uppercase;
+    }
+    .two .form-header h1 {
+      position: relative;
+      z-index: 40;
+      color: #FFFFFF;
+    }
+
+
+  @media (min-width: 770px) { 
+    .form {
+      z-index: 15;
+      position: relative;
+      background: #FFFFFF;
+      border-radius: 4px;
+      box-shadow: 0 0 30px rgba(0, 0, 0, 0.1);
+      box-sizing: border-box;
+      margin: 100px auto 10px;
+      overflow: hidden;
+      height: 60%;
+      width: 60%;
+    }
+    .form-toggle {
+      z-index: 10;
+      position: absolute;
+      top: 60px;
+      right: 60px;
+      background: #FFFFFF;
+      width: 60px;
+      height: 60px;
+      border-radius: 100%;
+      transform-origin: center;
+      transform: translate(0, -25%) scale(0);
+      opacity: 0;
+      cursor: pointer;
+      transition: all 0.3s ease;
+    }
+    .form-toggle:before, .form-toggle:after {
+      content: "";
+      display: block;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      width: 30px;
+      height: 4px;
+      background: rgb(33, 146, 71);
+      transform: translate(-50%, -50%);
+    }
+    .form-toggle:before {
+      transform: translate(-50%, -50%) rotate(45deg);
+    }
+    .form-toggle:after {
+      transform: translate(-50%, -50%) rotate(-45deg);
+    }
+    .form-toggle.visible {
+      transform: translate(0, -25%) scale(1);
+      opacity: 1;
+    }
+  
+   }
+   @media (min-width: 1250px) { 
+   .form {
     z-index: 15;
     position: relative;
     background: #FFFFFF;
-    width: 600px;
     border-radius: 4px;
     box-shadow: 0 0 30px rgba(0, 0, 0, 0.1);
     box-sizing: border-box;
     margin: 100px auto 10px;
     overflow: hidden;
-    height: 500px;
+    height: 35%;
+    width: 35%;
+  }
+}
 
-
-
-  }
-  .form-toggle {
-    z-index: 10;
-    position: absolute;
-    top: 60px;
-    right: 60px;
-    background: #FFFFFF;
-    width: 60px;
-    height: 60px;
-    border-radius: 100%;
-    transform-origin: center;
-    transform: translate(0, -25%) scale(0);
-    opacity: 0;
-    cursor: pointer;
-    transition: all 0.3s ease;
-  }
-  .form-toggle:before, .form-toggle:after {
-    content: "";
-    display: block;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 30px;
-    height: 4px;
-    background: rgb(33, 146, 71);
-    transform: translate(-50%, -50%);
-  }
-  .form-toggle:before {
-    transform: translate(-50%, -50%) rotate(45deg);
-  }
-  .form-toggle:after {
-    transform: translate(-50%, -50%) rotate(-45deg);
-  }
-  .form-toggle.visible {
-    transform: translate(0, -25%) scale(1);
-    opacity: 1;
-  }
+  @media (min-width: 700px) { 
   .form-group{
     display: flex;
     flex-wrap: wrap;
@@ -421,6 +876,7 @@ html {
     padding: 60px calc(10% + 60px) 60px 60px;
     transition: 0.3s ease;
     cursor: pointer;
+    overflow-y:scroll;
   }
   .form-panel.two:before, .form-panel.two:after {
     content: "";
@@ -432,6 +888,7 @@ html {
     height: 30px;
     width: 2px;
     transition: 0.3s ease;
+    overflow-y: scroll;
   }
   .form-panel.two:after {
     left: 3%;
@@ -466,12 +923,11 @@ html {
     z-index: 40;
     color: #FFFFFF;
   }
-
+}
   /* Create Account Button */
   #createAccountButton{
     margin-left:10px; 
     color:#188045;
-    text-decoration: underline;
     border:none; 
     background-color: none; 
   }
@@ -481,6 +937,7 @@ html {
     transition:0.3s;
     color:#298c54;
     cursor: pointer;
+    text-decoration: underline;
   }
   /* Forgot Password Button */
   #forgotPasswordButton:hover{
@@ -490,6 +947,14 @@ html {
     color:#298c54;
     cursor: pointer;
   }
+
+  /* Modal Close Button */
+  #modalCloseButton{
+    border-radius: 25%; 
+    border:none; 
+    background-color: rgb(255, 255, 255);
+  }
+
   /* Footer */
   #footer{
     position: relative;
