--- a/ppms_project/profilingApp/templates/activities/login_registration.html
+++ b/ppms_project/profilingApp/templates/activities/login_registration.html
@@ -152,18 +152,18 @@
                             <label for="">Password</label>
                             {{ form.password1 }}
                         </div>
-                        <div class="form-group">
+                        <div class="form-group d-flex justify-content-start align-items-center">
                             <label class="form-remember">
-                                <input type="checkbox" onclick="showPassword2()">Show Password
+                                <input type="checkbox" onclick="showPassword2()">SHOW PASSWORD
                             </label>
                         </div>
                         <div class="form-group">
                             <label for="">Confirm Password</label>
                             {{ form.password2 }}
                         </div>
-                        <div class="form-group">
+                        <div class="form-group d-flex justify-content-start align-items-center">
                             <label class="form-remember text-light">
-                                <input type="checkbox" onclick="showPassword3()">Show Password
+                                <input type="checkbox" onclick="showPassword3()">SHOW PASSWORD
                             </label>
                         </div>
                         <hr>
@@ -188,7 +188,7 @@
                 <div class="modal-content">
                     <div class="modal-header">
                         <h5 class="modal-title" id="exampleModalLabel">Terms</h5>
-                        <button type="button" class="close p-2" style="border-radius: 25%; border:none; background-color: rgb(241, 241, 241);" data-dismiss="modal" aria-label="Close">
+                        <button type="button" id ="modalCloseButton" class="close p-2" data-dismiss="modal" aria-label="Close">
                             <span aria-hidden="true"><i class="fas fa-2x fa-lg fa-times text-secondary"></i></span>
                         </button>
                     </div>
