--- a/ppms_project/profilingApp/templates/activities/login_registration.html
+++ b/ppms_project/profilingApp/templates/activities/login_registration.html
@@ -54,7 +54,7 @@
                             <label for="">Password</label>
                             <input type="password" id="password1" name="password">
                         </div>
-                        <div class="form-group">
+                        <div class="form-group d-flex justify-content-between mb-2">
                             <label class="form-remember">
                                 <input type="checkbox" onclick="showPassword()">Show Password
                             </label><a id="forgotPasswordButton" class="form-recovery" href="">Forgot Password?</a>
@@ -63,7 +63,7 @@
                             <button type="submit">Log In</button>
                         </div>
                         <hr>
-                        <div class="d-flex justify-content-center" >
+                        <div class="d-flex justify-content-sm-between justify-content-md-center" >
                             <p style="font-size:medium;">Not registered yet?</p><a id="createAccountButton"onclick="openpaneltwo(event)">Create Account</a>
                         </div>
                     </form>
@@ -168,11 +168,10 @@
                         </div>
                         <hr>
                         <!-- EULA -->
-                        <div class="form-check d-flex justify-content-start text-light align-items-center">
+                        <div class="form-check d-flex justify-content-start text-light mb-3">
                             <input class="form-check-input" type="checkbox" name="flexRadioDefault" id="flexRadioDefault1" required>
-                            <p class="mt-3" style="margin-left:15px;font-size:medium;">I accept the</p>
-                            <a type="button" class="btn border-0 text-light p-0" style="text-decoration: underline; margin-left:5px;" for="flexRadioDefault1" data-toggle="modal" data-target="#exampleModal">
-                                terms.
+                            <a type="button" id="eulaButton" class="btn border-0 text-light p-0" for="flexRadioDefault1" data-toggle="modal" data-target="#exampleModal">
+                                I accept the terms.
                             </a>
                         </div>
                         <div class="form-group">
@@ -226,17 +225,16 @@
                 <div class="col-lg-8">
                     <div class="row">
                         <div class="col-lg-4">
-                            <h2 class="footer-heading mb-4">Quick Links</h2>
+                            <h2 class="footer-heading mb-4">Contact Us</h2>
                             <ul class="list-unstyled">
-                            <li><a href="#">FAQs</a></li>
-                            <li><a href="#">Contact Us</a></li>
+                            <li><span><img class="navbar-icon" style="margin-right:10px;" src="../static/Media/contactLogo.png" alt="dasma-logo"> +63-993244361</span></li>
+                            <li><a href="https://www.facebook.com/Cho3dasmarinas" target="_blank"><img class="navbar-icon" style="margin-right:10px;" src="../static/Media/facebookLogo.png" alt="dasma-logo"> City Health Office </a></li>
                             </ul>
                         </div>
                         <div class="col-lg-4">
-                            <h2 class="footer-heading mb-4">Helpful Link</h2>
+                            <h2 class="footer-heading mb-4">Resource Materials</h2>
                             <ul class="list-unstyled">
-                            <li><a href="#">Healthcare Professional</a></li>
-                            <li><a href="#">LGU Facilities</a></li>
+                            <li><a href="https://www.nnc.gov.ph/opt2022" target="_blank"><img class="navbar-icon" style="margin-right:10px;" src="../static/Media/nncLogo.png" alt="dasma-logo"> eOPT Tools</a></li>
                             </ul>
                         </div>
                         <div class="col-lg-4">
