--- a/ppms_project/profilingApp/static/CSS/styles.css
+++ b/ppms_project/profilingApp/static/CSS/styles.css
@@ -57,32 +57,35 @@ a{
 
 .page-item.active .page-link {
   color: rgb(235, 233, 233) !important;
-  background-color: #188045 !important;
+  background-color: #1bb15c !important;
   border-color:rgba(0, 0, 0, 0.356) !important;
 }
-
 table{
-  padding: 25px 5px 10px 5px;
+  border: 1px ridge !important;
+  border-color:#003d1b7d !important;
 }
 thead{
   border-color:  rgba(23, 128, 69, 0.514)!important;
-  background-color: #f0fdec;
+  background-color: #eef9eb;
   text-align: left !important;
-}
+  color:#000000;
+} 
 th{
+  border-bottom: 1px solid !important;
   border-right: 1px solid !important;
   padding: 12px 15px !important; 
-  border-color: rgba(23, 128, 69, 0.492)!important;
+  border-color: #003d1b7d!important;
 }
 
 td{
+  border-bottom: 1px solid !important;
   border-right: 1px solid !important;
   padding: 12px 15px !important; 
-  border-color: rgba(23, 128, 69, 0.288)!important;
+  border-color: #003d1b7d!important;
 }
 
 tbody tr:nth-of-type(even) {
-  background-color: #edf7ea;
+  background-color: #f5faf4;
 }
 
 /* Navigation links/button styling */
@@ -131,29 +134,6 @@ tbody tr:nth-of-type(even) {
     display: none;
   }
 } 
-/* Header Dropdown Button */
-
-#dropdown-menu li a i{
-  padding:1px;
-}
-#dropdown-menu li a {
-  background-color: white;
-  border-radius: 0%;
-  padding: 5px;
-  color:black;
-  margin-bottom: 3px;
-  text-align: eft;
-  transition: 0.5s;
-  margin-left: 1px;
-}
-
-#dropdown-menu li a:hover  {
-  background-color: rgb(225 225 225);
-  color:black;
-  border-radius: 0%;
-  font-size: small;
-  background-color: #e4e4e39f;
-}
 
 /* Parent Home Button Styling */
 
@@ -217,7 +197,6 @@ tbody tr:nth-of-type(even) {
   color:white;
   padding: 10px 15px 5px 10px !important;
   text-align: center;
-
 }
 
 /* Login Form */
@@ -924,6 +903,10 @@ html {
     color: #FFFFFF;
   }
 }
+
+
+  /* Barangay Dropdown Button */
+
   /* Create Account Button */
   #createAccountButton{
     margin-left:10px; 
