--- a/ppms_project/profilingApp/templates/activities/Admin - Preschooler.html
+++ b/ppms_project/profilingApp/templates/activities/Admin - Preschooler.html
@@ -53,17 +53,17 @@
                             
                                 
                             </a>
-                            <ul class="dropdown-menu dropdown-menu-end p-2" aria-labelledby="dropdownUser1">
-                                <div id="dropdown-menu">
-                                    <div>
-                                        <i class="fa fa-lg fa-fw fa-user bi" style="margin-left:5px;"></i>  
-                                        <span style="font-size: 15px;"> {{ user.first_name }} {{ user.last_name }} </span>
-                                    </div>
-                                    <div>
-                                        <li><hr class="dropdown-divider"></li>
-                                        <li><a class="dropdown-item" href="{% url 'logout' %}"><i class="fa fa-fw fa-sign-out-alt mx-1"></i>Sign out</a></li>
-                                    </div>
+                            <ul class="dropdown-menu dropdown-menu-end p-2 "style="margin-right:3%;" aria-labelledby="dropdownUser1">
+                               
+                                <div>
+                                    <i class="fa fa-lg fa-fw fa-user bi" style="margin-left:5px;"></i>  
+                                    <span style="font-size: 15px;"> {{ user.first_name }} {{ user.last_name }} </span>
                                 </div>
+                                <div>
+                                    <li><hr class="dropdown-divider"></li>
+                                    <li><a class="dropdown-item" style="background-color: rgba(255, 255, 255, 0); padding: 2px !important; margin-left:7px;" href="{% url 'logout' %}"><i class="fa fa-fw fa-sign-out-alt mx-1"></i>Sign out</a></li>
+                                </div>
+                               
                             </ul>                    
                         </li>
                     </ul>
@@ -92,7 +92,7 @@
                     <h3> Preschooler Status Overview</h3>
                 </div>
                 <div class="col-sm-6  mb-3 d-flex justify-content-sm-end justify-content-center">
-                    <div class="card text-right" style="width: 10rem;">
+                    <div class="card text-right shadow-sm" style="width: 10rem;">
                         <div class="dropdown text-center" >
                             <h6 class="text-uppercase text-muted dropdown-header">Barangay</h6>
                             <select class="form-select " aria-label="Default select example" onchange="javascript:handleNextView(this)">
