--- a/ppms_project/profilingApp/templates/activities/Admin Home.html
+++ b/ppms_project/profilingApp/templates/activities/Admin Home.html
@@ -46,7 +46,7 @@
                         <li>
                             <a href="{% url 'admin_home2' %}" class="nav-link" data-toggle="tooltip" data-bs-placement="bottom" data-bs-offset="0,7"
                             title="Preschooler Status">
-                            <i class="fa fa-fw fa-id-card " style="font-size: 24px;"></i>
+                            <i class="fa fa-3x fa-fw fa-id-card " style="font-size: 24px;"></i>
                             </a>
                         </li>
                         <li>
@@ -73,17 +73,15 @@
                                 </span></a>
                                 
                             </a>
-                            <ul class="dropdown-menu dropdown-menu-end p-2" aria-labelledby="dropdownUser1">
-                                <div id="dropdown-menu">
-                                    <div>
-                                        <i class="fa fa-lg fa-fw fa-user bi" style="margin-left:5px;"></i>   
-                                        <span style="font-size: 15px;"> {{ user.first_name }} {{ user.last_name }} </span>
-                                    </div>
-                                    <div>
-                                        <li><hr class="dropdown-divider"></li>
-                                        <li><a class="dropdown-item" href="{% url 'logout' %}"><i class="fa fa-fw fa-sign-out-alt mx-1"></i>Sign out</a></li>
-                                    </div>
+                            <ul class="dropdown-menu dropdown-menu-end p-2" style="margin-right:3%;" aria-labelledby="dropdownUser1">
+                                <div>
+                                    <i class="fa fa-lg fa-fw fa-user bi " style="margin-left:5px;"></i>   
+                                    <span style="font-size: 15px;"> {{ user.first_name }} {{ user.last_name }} </span>
                                 </div>
+                                <div>
+                                    <li><hr class="dropdown-divider"></li>
+                                    <li><a class="dropdown-item" style="background-color: rgba(255, 255, 255, 0); padding: 2px !important; margin-left:7px;"href="{% url 'logout' %}"><i class="fa fa-fw fa-sign-out-alt"></i>Sign out</a></li>
+                                </div>  
                             </ul>                    
                         </li>
                     </ul>
@@ -190,7 +188,7 @@
                     </div>
                     
                 </div>
-                <div class="container-fluid col-xxl-4 col-lg-6 col-md-12 h-100 align-items-stretch ">
+                <div class="container-fluid col-xxl-4 col-lg-6 col-md-12 align-self-stretch ">
                     <div class="col-xl-12 mb-3">
                         <div class="card shadow-sm bg-white rounded" >  
                             <div class="card-header">
