--- a/ppms_project/profilingApp/templates/activities/Parent Home.html
+++ b/ppms_project/profilingApp/templates/activities/Parent Home.html
@@ -41,17 +41,17 @@
                             </span></a>
                             
                         </a>
-                        <ul class="dropdown-menu dropdown-menu-end p-2" aria-labelledby="parentButton">
-                            <div id="dropdown-menu">
-                                <div>
-                                    <i class="fa fa-lg fa-fw fa-user bi" style="margin-left:5px;"></i>   
-                                    <span style="font-size: 15px;"> {{ user.first_name }} {{ user.last_name }} </span>
-                                </div>
-                                <div>
-                                    <li><hr class="dropdown-divider"></li>
-                                    <li><a class="dropdown-item" href="{% url 'logout' %}"><i class="fa fa-fw fa-sign-out-alt mx-1"></i>Sign out</a></li>
-                                </div>
+                        <ul class="dropdown-menu dropdown-menu-end p-2" style="margin-right:3%;" aria-labelledby="parentButton">
+                            
+                            <div>
+                                <i class="fa fa-lg fa-fw fa-user bi" style="margin-left:5px;"></i>   
+                                <span style="font-size: 15px;"> {{ user.first_name }} {{ user.last_name }} </span>
                             </div>
+                            <div>
+                                <li><hr class="dropdown-divider"></li>
+                                <li><a class="dropdown-item" style="background-color: rgba(255, 255, 255, 0); padding: 2px !important; margin-left:7px;" href="{% url 'logout' %}"><i class="fa fa-fw fa-sign-out-alt mx-1"></i>Sign out</a></li>
+                            </div>
+                        
                         </ul>                    
                     </li>
                 </div>
