--- a/ppms_project/profilingApp/templates/activities/login_registration.html
+++ b/ppms_project/profilingApp/templates/activities/login_registration.html
@@ -168,7 +168,7 @@
                         </div>
                         <hr>
                         <!-- EULA -->
-                        <div class="form-check d-flex justify-content-start text-light mb-3">
+                        <div class="form-check d-flex justify-content-start text-ligh mb-3">
                             <input class="form-check-input" type="checkbox" name="flexRadioDefault" id="flexRadioDefault1" required>
                             <a type="button" id="eulaButton" class="btn border-0 text-light p-0" for="flexRadioDefault1" data-toggle="modal" data-target="#exampleModal">
                                 I accept the terms.
