--- a/ppms_project/profilingApp/templates/activities/Admin Home.html
+++ b/ppms_project/profilingApp/templates/activities/Admin Home.html
@@ -12,6 +12,7 @@
     <script src="{% static '/Javascript/js/datatables.js' %}"></script>
 
     <link rel="stylesheet" href="{% static '/CSS/styles.css' %}">
+    <link rel="stylesheet" href="{% static '/CSS/cardstyles.css' %}">
     <link rel="stylesheet" href="{% static '/CSS/font-awesome/css/all.min.css' %}">
     <link rel="stylesheet" href="{% static '/CSS/css/bootstrap.min.css' %}">
     <script src="{% static '/Javascript/js/Chart.min.js' %}" crossorigin="anonymous"></script>
@@ -109,39 +110,90 @@
             <div class="row d-flex align-items-stretch ">
                 <div class="col-xxl-8 col-lg-6 col-md-12 ">
                     <div class="row mb-3 align-items-stretch">
-                        <div class="col-xxl-3 col-sm-6 mb-2">
-                                <div class="card shadow-sm bg-white rounded h-100">
-                                    <div class="card-header"><i class="fas fa-lg fa-user-check" style="color: green; position:relative; margin-right:10px;"></i>Number of Validated BHW</div>
-                                    <div class="card-body">
-                                        <h5 class="card-title">{{ validated_count }}</h5>
+                        <!-- Validated BHW Count Card  -->
+                        <div class="col-xxl-3 col-sm-6 mb-2">                      
+                            <div class="card shadow-sm bg-white rounded d-flex align-items-stretch rounded" style="height: 165px;">
+                                <div class="card-body p-4 mt-2 d-flex flex-column align-items-stretch justify-content-center">
+                                    <div class="row">
+                                        <div class="col-4 d-flex justify-content-center align-items-center text-center">
+                                            <i class="fas fa-3x fa-lg fa-user-md" style="color: #1bb15c ; position:absolute;"></i>
+                                        </div>
+                                        <div class="col-8 d-block justify-content-center text-center align-items-center" >
+                                            <div class="row d-flex justify-content-center text-center align-items-stretch">
+                                                <h1 class="card-title" style="font-size: 35px;">{{ validated_count }}</h1>
+                                            </div>
+                                            <div class="row d-flex justify-content-center text-center align-items-stretch">
+                                                <span>Validated BHW</span>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
+                            </div>  
                         </div>
+                        <!-- Parents Count Card  -->
                         <div class="col-xxl-3 col-sm-6 mb-2">
-                            <div class="card shadow-sm bg-white rounded h-100">
-                                    <div class="card-header"><i class="fas fa-lg fa-user" style="color: rgb(0, 0, 0); position:relative; margin-right:10px;"></i>Number of Parents</div>
-                                    <div class="card-body">
-                                        <h5 class="card-title">{{ parent_count }}</h5>
+                            <div class="card shadow-sm bg-white rounded d-flex align-items-stretch rounded" style="height: 165px;">
+                                <div class="card shadow-sm bg-white rounded d-flex align-items-stretch" style="height: 165px;">
+                                    <div class="card-body p-4 mt-2 d-flex flex-column align-items-stretch justify-content-center">
+                                        <div class="row">
+                                            <div class="col-4 d-flex justify-content-center align-items-center text-center">
+                                                <i class="fas fa-3x fa-lg fa-user" style="color: #1bb15c ; position:absolute;"></i>
+                                            </div>
+                                            <div class="col-8 d-block justify-content-center text-center align-items-center" >
+                                                <div class="row d-flex justify-content-center text-center align-items-center">
+                                                    <h1 class="card-title" style="font-size: 35px;">{{ parent_count }}</h1>
+                                                </div>
+                                                <div class="row d-flex justify-content-center text-center align-items-center">
+                                                    <span>Number of Parents</span>
+                                                </div>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-xxl-3 col-sm-6 mb-2 ">
-                                <div class="card shadow-sm bg-white rounded h-100">
-                                <div class="card-header"><i class="fas fa-lg fa-user-slash" style="color:orange; position:relative; margin-right:10px;"></i>Number of Non-Validated BHW</div>
-                                <div class="card-body">
-                                    <h5 class="card-title">{{ invalidated_count }}</h5>
+                        </div>
+                        <!-- Non - Validated BHW Count Card  -->
+                        <div class="col-xxl-3 col-sm-6 mb-2 ">
+                            <div class="card shadow-sm bg-white rounded d-flex align-items-stretch rounded" style="height: 165px;">
+                                <div class="card-body p-3 mt-2 ms-3 d-flex flex-column align-items-stretch justify-content-center">
+                                    <div class="row">
+                                        <div class="col-4 d-flex justify-content-center align-items-center text-center">
+                                            <i class="fas fa-3x fa-lg fa-user-times" style="color: #1bb15c ; position:absolute;"></i>
+                                        </div>
+                                        <div class="col-8 d-block justify-content-center text-center align-items-center" >
+                                            <div class="row d-flex justify-content-center text-center align-items-center">
+                                                <h1 class="card-title" style="font-size: 35px;">{{ invalidated_count }}</h1>
+                                            </div>
+                                            <div class="row d-flex justify-content-center text-center align-items-center">
+                                                <span>Unvalidated BHW</span>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
+                        <!-- Preschoolers Count Card  -->
                         <div class="col-xxl-3 col-sm-6 mb-2">
-                            <div class="card shadow-sm bg-white rounded h-100">
-                                    <div class="card-header"><i class="fas fa-lg fa-baby" style="color: green; position:relative; margin-right:10px;"></i>Number of Preschoolers</div>
-                                    <div class="card-body">
-                                        <h5 class="card-title">{{ preschooler_count }}</h5>
+                            <div class="card shadow-sm bg-white rounded d-flex align-items-stretch rounded" style="height: 165px;">
+                                <div class="card-body p-4 mt-2 d-flex flex-column align-items-stretch justify-content-center">
+                                    <div class="row">
+                                        <div class="col-4 d-flex justify-content-center align-items-center text-center">
+                                            <i class="fas fa-3x fa-lg fa-child" style="color: #1bb15c ; position:absolute;"></i>
+                                        </div>
+                                        <div class="col-8 d-block justify-content-center text-center align-items-center" >
+                                            <div class="row d-flex justify-content-center text-center align-items-center">
+                                                <h1 class="card-title" style="font-size: 35px;">{{ preschooler_count }}</h1>
+                                            </div>
+                                            <div class="row d-flex justify-content-center text-center align-items-center">
+                                                <span>Number of Preschoolers</span>
+                                            </div>
+                                        </div>
                                     </div>
+                                </div>
                             </div>
                             </div>
                         </div>
+                        <!-- BHW List Table Card  -->
                         <div class='row d-flex align-items-stretch mb-2'>
                         <div class="col-xl-12">
                             <div class="card shadow-sm bg-white rounded h-100">
@@ -184,11 +236,10 @@
                                 </div>
                             </div>
                         </div>  
-                        
                     </div>
-                    
                 </div>
-                <div class="container-fluid col-xxl-4 col-lg-6 col-md-12 align-self-stretch ">
+                <!-- Pie Chart Card  -->
+                <div class="container-fluid col-xxl-4 col-lg-6 col-md-12 align-self-stretch">
                     <div class="col-xl-12 mb-3">
                         <div class="card shadow-sm bg-white rounded" >  
                             <div class="card-header">
