--- a/ppms_project/profilingApp/templates/activities/Admin Validate BHW.html
+++ b/ppms_project/profilingApp/templates/activities/Admin Validate BHW.html
@@ -104,8 +104,8 @@
 
                 </div>
                 <div class="card shadow-lg p-3 bg-white rounded" >
-                    <div class="table-responsive">
-                        <table class="table table-hover table-cell-border" id="table_validation">
+                    <div class="table-responsive" >
+                        <table class="table table-hover table-cell-border" id="table_validation" style="min-height: 400px;">
                             <thead>
                                 <tr>
                                     <th scope="col" class="text-center">No.</th>
