--- a/ppms_project/profilingApp/templates/activities/BHW Preschooler Dashboard.html
+++ b/ppms_project/profilingApp/templates/activities/BHW Preschooler Dashboard.html
@@ -71,7 +71,7 @@
             <div class="card shadow-lg p-3 bg-white rounded">
 
                 <div class="table-responsive">
-                    <table class="table table-hover table-cell-border" id="preschooler_bmi">
+                    <table class="table table-hover table-cell-border" id="preschooler_bmi"  style="min-height: 400px;">
                         <thead>
                             <tr style="text-align: center;">
                                 <th scope="col">No.</th>
