--- a/ppms_project/profilingApp/templates/activities/Admin Home.html
+++ b/ppms_project/profilingApp/templates/activities/Admin Home.html
@@ -36,7 +36,9 @@
                         <span id="hidetitle" class="brand__name" style="color:rgb(0, 0, 0); margin-left:10px;">City of Dasmariñas</span>
                     </a>
                 </div>
-                <div id="navLinks">
+                <label id="hamburger"for="toggle"><i class="fa fa-fw fa-bars" style="font-size: 24px;"></i>   </i></label>
+                <input type="checkbox" id="toggle">
+                <div class="menu" id="navLinks">
                     <ul class="nav text-small">
                         <li>
                             <a href="{% url 'admin_home' %}" class="nav-link" style="color:rgb(27, 177, 92) !important;"data-toggle="tooltip" data-bs-placement="bottom" data-bs-offset="0,7"  
