--- a/ppms_project/profilingApp/templates/activities/Admin Home.html
+++ b/ppms_project/profilingApp/templates/activities/Admin Home.html
@@ -114,7 +114,7 @@
                     <div class="row mb-3 align-items-stretch">
                         <!-- Validated BHW Count Card  -->
                         <div class="col-xxl-3 col-sm-6 mb-2">                      
-                            <div class="card shadow-sm bg-white rounded d-flex align-items-stretch rounded" style="height: 165px;">
+                            <div class="card hoverable shadow-sm bg-white rounded d-flex align-items-stretch rounded" style="height: 165px;">
                                 <div class="card-body p-4 mt-2 d-flex flex-column align-items-stretch justify-content-center">
                                     <div class="row">
                                         <div class="col-4 d-flex justify-content-center align-items-center text-center">
@@ -134,7 +134,7 @@
                         </div>
                         <!-- Parents Count Card  -->
                         <div class="col-xxl-3 col-sm-6 mb-2">
-                            <div class="card shadow-sm bg-white rounded d-flex align-items-stretch rounded" style="height: 165px;">
+                            <div class="card hoverable shadow-sm bg-white rounded d-flex align-items-stretch rounded" style="height: 165px;">
                                 <div class="card shadow-sm bg-white rounded d-flex align-items-stretch" style="height: 165px;">
                                     <div class="card-body p-4 mt-2 d-flex flex-column align-items-stretch justify-content-center">
                                         <div class="row">
@@ -156,7 +156,7 @@
                         </div>
                         <!-- Non - Validated BHW Count Card  -->
                         <div class="col-xxl-3 col-sm-6 mb-2 ">
-                            <div class="card shadow-sm bg-white rounded d-flex align-items-stretch rounded" style="height: 165px;">
+                            <div class="card hoverable shadow-sm bg-white rounded d-flex align-items-stretch rounded" style="height: 165px;">
                                 <div class="card-body p-3 mt-2 ms-3 d-flex flex-column align-items-stretch justify-content-center">
                                     <div class="row">
                                         <div class="col-4 d-flex justify-content-center align-items-center text-center">
@@ -176,7 +176,7 @@
                         </div>
                         <!-- Preschoolers Count Card  -->
                         <div class="col-xxl-3 col-sm-6 mb-2">
-                            <div class="card shadow-sm bg-white rounded d-flex align-items-stretch rounded" style="height: 165px;">
+                            <div class="card hoverable shadow-sm bg-white rounded d-flex align-items-stretch rounded" style="height: 165px;">
                                 <div class="card-body p-4 mt-2 d-flex flex-column align-items-stretch justify-content-center">
                                     <div class="row">
                                         <div class="col-4 d-flex justify-content-center align-items-center text-center">
