--- a/ppms_project/profilingApp/templates/activities/Parent Home.html
+++ b/ppms_project/profilingApp/templates/activities/Parent Home.html
@@ -27,8 +27,8 @@
             <div class="container-fluid justify-content-between px-4 mx-4" >
                 <div>
                     <a href="#" class="name" style="text-decoration: none;">
-                        <img class="navbar-icon" style="margin-left:15px;" src="{% static '/Media/avatar.png' %}" alt="dasma-logo">
-                        <span id="hidetitle" class="brand__name" style="color:#2c5f2dff;">City of Dasmariñas</span>
+                        <img class="navbar-icon" src="{% static '/Media/avatar.png' %}" alt="dasma-logo">
+                        <span id="hidetitle" class="brand__name" style="color:#2c5f2dff;margin-left:15px;">City of Dasmariñas - Preschooler Profiling and Monitoring System</span>
                     </a>
                 </div>
                 <div class="btn-group my-2 mx-3">
@@ -42,7 +42,6 @@
                             
                         </a>
                         <ul class="dropdown-menu dropdown-menu-end p-2" style="margin-right:3%;" aria-labelledby="parentButton">
-                            
                             <div>
                                 <i class="fa fa-lg fa-fw fa-user bi" style="margin-left:5px;"></i>   
                                 <span style="font-size: 15px;"> {{ user.first_name }} {{ user.last_name }} </span>
@@ -51,8 +50,7 @@
                                 <li><hr class="dropdown-divider"></li>
                                 <li><a class="dropdown-item" style="background-color: rgba(255, 255, 255, 0); padding: 2px !important; margin-left:7px;" href="{% url 'logout' %}"><i class="fa fa-fw fa-sign-out-alt mx-1"></i>Sign out</a></li>
                             </div>
-                        
-                        </ul>                    
+                        </ul>                   
                     </li>
                 </div>
             </div>
@@ -82,9 +80,16 @@
             <br>
             </div>
         </div>
-        <div class="d-flex justify-content-between">
-            <h4 style="Padding: 10px 40px 0px 0px;">My Preschoolers</h4>
-            <button style="margin-bottom: 15px; background-color: #188045;border-color:#188045;" type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addSched"><span class="fa fa-calendar-alt"></span> Enroll Preschooler</button>
+        <div class="container-fluid">
+            <div class="row d-flex justify-content-stretch flex-row ">
+                <div class="col-sm-6  mb-3 d-flex justify-content-sm-start justify-content-center">
+                    <h4>My Preschoolers</h4>
+                </div>
+                <div class="col-sm-6  mb-3 d-flex justify-content-sm-end justify-content-center">
+                    <button style="margin-bottom: 15px; background-color: #188045;border-color:#188045; height: 50px;" type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addSched">
+                        <span class="fa fa-calendar-alt"></span> Enroll Preschooler</button>
+                </div>
+            </div>
             <div class="modal fade" id="addSched" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                 <div class="modal-dialog modal-dialog-centered modal-lg">
                     <div class="modal-content">
@@ -131,35 +136,36 @@
                 </div>
             </div>
         </div>
-        <style>
-            .hoverable {
-                transition: .3s transform cubic-bezier(.155,1.105,.295,1.12),.3s box-shadow,.3s -webkit-transform cubic-bezier(.155,1.105,.295,1.12);
-                cursor: pointer;
-            }
-            .hoverable:hover{
-                transform: scale(1.02);
-                box-shadow: 0 10px 20px rgba(0,0,0,.12), 0 4px 8px rgba(0,0,0,.06);
-            }
-        </style>
         {% for chunk in chunks %}
             <div class="row">
                 {% for item in chunk %}
                     <div class="col-md-{{ numberOfColumns }} mb-3">
-                        <a class="card hoverable text-decoration-none text-primary" href="{% url 'parent_preschooler' item.id %}">
-                            <div class="card-body">
+                        <a class="card hoverable text-decoration-none" href="{% url 'parent_preschooler' item.id %}" style="min-height: 140px;">
+                            <div class="card-body d-flex flex-column align-items-stretch justify-content-center">
                                 <div class="text-center">
-                                    <!--- uploads/avatar_{{ item.id }} ----->
-                                    <img src="https://png.pngtree.com/png-vector/20190114/ourlarge/pngtree-vector-avatar-icon-png-image_313572.jpg" height="40px" width="40px">
+                                    <div class="row">
+                                        <div class="col-4 d-flex justify-content-center align-items-center text-center">
+                                                <!--- uploads/avatar_{{ item.id }} ----->
+                                            <img class="rounded-circle"src="https://png.pngtree.com/png-vector/20190114/ourlarge/pngtree-vector-avatar-icon-png-image_313572.jpg" height="100%" width="100%">
+                                        </div>
+                                        <div class="col-8 d-flex justify-content-start align-items-center text-start  text-body">
+                                            <div>Name : {{ item.first_name }} {{ item.middle_name }} {{ item.last_name }} {{ preschooler.suffix_name }} 
+                                                <br> Age: {{item.age_months}} months
+                                                <br> Gender: {{ item.gender }}
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
-                                <div>
-                                    <div class="text-center">{{ item.first_name }} {{ item.middle_name }} {{ item.last_name }} {{ preschooler.suffix_name }}</div>
-                                </div>
+                            </div>
+                            <div class="card-footer text-center text-muted">
+                                <span> Click card for more details</span>
                             </div>
                         </a>
                     </div>
                 {% endfor %}
             </div>
         {% endfor %}
+    </div>
     <!--
     <div class="container text-black">
             <div class="row">
