--- a/ppms_project/profilingApp/templates/activities/Admin - Preschooler.html
+++ b/ppms_project/profilingApp/templates/activities/Admin - Preschooler.html
@@ -116,50 +116,50 @@
                 <div class="col-md mb-2">
                 <div class="card shadow-sm bg-white rounded h-100">
                         <div class="card-header">
-                            <h6 class="card-title">Normal</h6>
+                            <h4 class="card-title">Normal</h4>
                         </div>
-                        <div class="card-body">
-                            <p class="card-text">{{ normal }}</p>
+                        <div class="card-body text-center">
+                            <p style="font-size: xx-large;" class="card-text">{{ normal }}</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-md mb-2">
                     <div class="card shadow-sm bg-white rounded h-100">
                         <div class="card-header">
-                            <h6 class="card-title">Wasted</h6>
+                            <h4 class="card-title">Wasted</h4>
                         </div>
-                        <div class="card-body">
-                            <p class="card-text">{{ wasted }}</p>
+                        <div class="card-body text-center">
+                            <p style="font-size: xx-large;" class="card-text">{{ wasted }}</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md mb-2">
+                    <div class="card shadow-sm bg-white rounded h-100 ">
+                        <div class="card-header ">
+                            <h4 class="card-title">Severly Wasted</h4>
+                        </div>
+                        <div class="card-body text-center">
+                            <p style="font-size: xx-large;" class="card-text">{{ severly }}</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-md mb-2">
                     <div class="card shadow-sm bg-white rounded h-100 ">
                         <div class="card-header">
-                            <h6 class="card-title">Severly Wasted</h6>
+                            <h4 class="card-title">Overweight</h4>
                         </div>
-                        <div class="card-body">
-                            <p class="card-text">{{ severly }}</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md mb-2">
-                    <div class="card shadow-sm bg-white rounded h-100 ">
-                        <div class="card-header">
-                            <h6 class="card-title">Overweight</h6>
-                        </div>
-                        <div class="card-body">
-                            <p class="card-text">{{ overobese }}</p>
+                        <div class="card-body text-center">
+                            <p style="font-size: xx-large;" class="card-text">{{ overobese }}</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-md mb-2">
                     <div class="card shadow-sm bg-white rounded h-100 ">
                         <div class="card-header">
-                            <h6 class="card-title">Obese</h6>
+                            <h4 class="card-title">Obese</h4>
                         </div>
-                        <div class="card-body">
-                            <p class="card-text">{{ overobese }}</p>
+                        <div class="card-body text-center">
+                            <p style="font-size: xx-large;" class="card-text">{{ overobese }}</p>
                         </div>
                     </div>
                 </div>
