--- a/ppms_project/profilingApp/templates/activities/BHW Home.html
+++ b/ppms_project/profilingApp/templates/activities/BHW Home.html
@@ -110,53 +110,53 @@
             </div>
         </div>
         <div class="row d-flex align-items-stretch">
-                <div class="col-md mb-2">
+            <div class="col-md mb-2">
                 <div class="card shadow-sm bg-white rounded h-100">
                         <div class="card-header">
-                            <h5 class="card-title">Normal</h5>
+                            <h4 class="card-title">Normal</h4>
                         </div>
-                        <div class="card-body">
-                            <p class="card-text">{{ normal }}</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md mb-2">
-                    <div class="card shadow-sm bg-white rounded  h-100">
-                        <div class="card-header">
-                            <h5 class="card-title">Wasted</h5>
-                        </div>
-                        <div class="card-body">
-                            <p class="card-text">{{ wasted }}</p>
+                        <div class="card-body text-center">
+                            <p style="font-size: xx-large;" class="card-text">{{ normal }}</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-md mb-2">
-                    <div class="card shadow-sm bg-white rounded  h-100">
+                    <div class="card shadow-sm bg-white rounded h-100">
                         <div class="card-header">
-                            <h5 class="card-title">Severly Wasted</h5>
+                            <h4 class="card-title">Wasted</h4>
                         </div>
-                        <div class="card-body">
-                            <p class="card-text">{{ severly }}</p>
+                        <div class="card-body text-center">
+                            <p style="font-size: xx-large;" class="card-text">{{ wasted }}</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-md mb-2">
-                    <div class="card shadow-sm bg-white rounded  h-100">
-                        <div class="card-header">
-                            <h5 class="card-title">Overweight</h5>
+                    <div class="card shadow-sm bg-white rounded h-100 ">
+                        <div class="card-header ">
+                            <h4 class="card-title">Severly Wasted</h4>
                         </div>
-                        <div class="card-body">
-                            <p class="card-text">{{ overobese }}</p>
+                        <div class="card-body text-center">
+                            <p style="font-size: xx-large;" class="card-text">{{ severly }}</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-md mb-2">
-                    <div class="card shadow-sm bg-white rounded  h-100">
+                    <div class="card shadow-sm bg-white rounded h-100 ">
                         <div class="card-header">
-                            <h5 class="card-title">Obese</h5>
+                            <h4 class="card-title">Overweight</h4>
                         </div>
-                        <div class="card-body">
-                            <p class="card-text">{{ overobese }}</p>
+                        <div class="card-body text-center">
+                            <p style="font-size: xx-large;" class="card-text">{{ overobese }}</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md mb-2">
+                    <div class="card shadow-sm bg-white rounded h-100 ">
+                        <div class="card-header">
+                            <h4 class="card-title">Obese</h4>
+                        </div>
+                        <div class="card-body text-center">
+                            <p style="font-size: xx-large;" class="card-text">{{ overobese }}</p>
                         </div>
                     </div>
                 </div>
